--- a/_data/team.yml
+++ b/_data/team.yml
@@ -2,5 +2,57 @@ team-title: Program Committee
 team-description: Scala Days talks are selected through an independent team, or program committee, who volunteer their time to review each talk submitted. Stay tuned for more information and to meet the experts that comprise this year's program committee.
 
 members:
-
-  
+  - name: "Adriaan Moors"
+    position: "ZF Group"
+    about: "Former Scala 2 compiler lead."
+    image: "/img/assets/team/AdriaanMoors.jpeg"
+    linkedin: "https://www.linkedin.com/in/adriaanm"
+    github: "https://github.com/adriaanm"
+  - name: "Prof. Dr. Andrei Kucharavy"
+    position: "Informatics Institute of HEVS"
+    about: "Assistant Professor at the Informatics Institute of HEVS, co-director of the HES-SO Gen Learning Center and Swiss Cyber Defence Campus Distinguished Post-Doctoral Fellow. Until 2012 was convinced JVM was the best thing to have happened to humanity; wrote and maintained some code since; taught software and ML carpentry, devops, python magic. Since 2020, has been working on the impact of Generative ML on cybersecurity since 2020, and since 2023, specifically on code generation."
+    image: "/img/assets/team/AndreiKucharavy.JPG"
+    linkedin: "https://www.linkedin.com/in/andrei-kucharavy/"
+    github: "https://github.com/andrei_chiffa"
+  - name: "Darja Jovanovic"
+    position: "EPFL, Scala Center"
+    about: "Executive director of the Scala Center, in the role of Scala Days program manager since 2018."
+    image: "/img/assets/team/darja-jovanovic.jpg"
+    linkedin: "https://www.linkedin.com/in/darjajovanovic"
+    github: "https://github.com/scalacenter"
+  - name: "Dimi Racordon"
+    position: "EPFL"
+    about: "Dimi Racordon is a researcher at EPFL in Switzerland. She got her Ph.D. in computer science at the University of Geneva, but only because she bribed her jury members with chocolate. She worked on model checking and developed efficient data structures to generate and explore large state spaces. She then studied logics and type systems while trying to find new ways to teach computer science. Dimi likes generic programming, because it looks like math, and low-level programming languages, because she loves wasting time on premature optimization. Since she doesn't like Haskell's syntax, loathes JIT optimizers, isn't good enough to write C++, and thinks she's too cool for Rust, she decided to focus her research on another programming language for safe, high-level systems programming."
+    image: "/img/assets/team/DimiRacordon.jpeg"
+    linkedin: "https://www.linkedin.com/in/dimi-racordon-830972104/"
+    github: "https://github.com/kyouko-taiga"
+  - name: "Krzysztof Borowski"
+    position: "VirtusLab"
+    about: "Krzysztof Borowski is a Principal Software Engineer at VirtusLab and holds a Ph.D. in computer science. As both a researcher and hands-on practitioner, he focuses on designing simple, elegant, and scalable solutions that effectively meet business requirements."
+    image: "/img/assets/workshops/KrzysztofBorowski.jpg"
+    linkedin: "https://www.linkedin.com/in/liosedhel/"
+    github: "https://github.com/liosedhel"
+  - name: "Martin Odersky"
+    position: "EPFL, Scala Center"
+    about: "Martin Odersky is a professor at EPFL in Lausanne, Switzerland. He is best known as the creator of the Scala programming language. Prior to that, he made several contributions to the development of Java. He created the Pizza and GJ languages, designed the original version of generics for Java, and wrote the javac reference compiler. More generally, Martin is interested in programming languages and methods, in particular how object-oriented and functional programming can be made to work seamlessly together. He believes is that the two paradigms are two sides of the same coin and should be unified as much as possible. He was named an ACM fellow for his achievements in this area."
+    image: "/img/assets/team/martin-odersky.jpg"
+    linkedin: "https://www.linkedin.com/in/odersky/"
+    github: "https://github.com/odersky"
+  - name: "Raúl Raja"
+    position: "Predictable Machines"
+    about: "CTO and Co-founder of Predictable Machines"
+    image: 
+    linkedin: "https://www.linkedin.com/in/raulraja/"
+    github: "https://github.com/raulraja"
+  - name: "Seth Tisue"
+    position: 
+    about: "Seth has been active in the Scala community since 2008 in roles including user, contributor, meetup and conference organizer, speaker, podcaster, moderator, and more. He is currently a voting member of the Scala Core Team as “Community Advocate”. He likes compilers, interpreters, functional programming, open source, and clean code."
+    image: "/img/assets/team/SethTisue.JPG"
+    linkedin: "https://www.linkedin.com/in/sethtisue/"
+    github: "https://github.com/SethTisue"
+  - name: "Zainab Ali"
+    position: "Dusk Impression"
+    about: "Zainab is a functional polyglot and educator. As well as all things functional, she's interested in the art of reasoning through concurrent systems."
+    image: "/img/assets/workshops/ZainabAli.jpg"
+    linkedin: "https://www.linkedin.com/in/zainab-ali-fp/"
+    github: "https://www.github.com/zainab-ali"
