--- a/_data/nav.yml
+++ b/_data/nav.yml
@@ -16,6 +16,11 @@
     nav: nav
     wip: false
 
+  - title: Program Committee
+    url: /#committee
+    nav: nav
+    wip: false
+
   - title: Venue
     url: /the-venue
     nav: nav
