--- a/_data/team.yml
+++ b/_data/team.yml
@@ -51,7 +51,7 @@ members:
     linkedin: "https://www.linkedin.com/in/sethtisue/"
     github: "https://github.com/SethTisue"
   - name: "Zainab Ali"
-    position: "Dusk Impression"
+    position: "Pure Async"
     about: "Zainab is a functional polyglot and educator. As well as all things functional, she's interested in the art of reasoning through concurrent systems."
     image: "/img/assets/workshops/ZainabAli.jpg"
     linkedin: "https://www.linkedin.com/in/zainab-ali-fp/"
