--- a/_data/workshops.yml
+++ b/_data/workshops.yml
@@ -1,6 +1,6 @@
 zainab:
   name: "Zainab Ali"
-  position: Dusk Impression
+  position: Pure Async
   about: Zainab is a functional polyglot and educator. As well as all things functional, she’s interested in the art of reasoning through concurrent systems.
   image: /img/assets/workshops/ZainabAli.jpg
   linkedin: "https://www.linkedin.com/in/zainab-ali-fp/"
