--- a/_data/workshops.yml
+++ b/_data/workshops.yml
@@ -1,8 +1,8 @@
 zainab:
   name: "Zainab Ali"
   position: Pure Async
-  about: Zainab is a functional polyglot and educator. As well as all things functional, she’s interested in the art of reasoning through concurrent systems.
-  image: /img/assets/workshops/ZainabAli.jpg
+  about: "Zainab is a functional polyglot and educator. As well as all things functional, she’s interested in the art of reasoning through concurrent systems."
+  image: /img/assets/team/ZainabAli.jpg
   linkedin: "https://www.linkedin.com/in/zainab-ali-fp/"
   github: "https://www.github.com/zainab-ali"
 
@@ -17,7 +17,7 @@ noel:
 daniel:
   name: "Daniel Ciocirlan"
   position: Rock the JVM
-  about: Daniel is the founder of Rock the JVM, a learning platform for everything in the Scala ecosystem. Daniel has a Master’s Degree in Computer Science and wrote his Bachelor and Master theses on Quantum Computation. Before starting to learn programming, he won medals at international Physics competitions.
+  about: "Daniel is the founder of Rock the JVM, a learning platform for everything in the Scala ecosystem. Daniel has a Master’s Degree in Computer Science and wrote his Bachelor and Master theses on Quantum Computation. Before starting to learn programming, he won medals at international Physics competitions."
   image: /img/assets/workshops/DanielCiocirlan.png
   linkedin: "http://linkedin.com/company/rockthejvm"
   github: "https://github.com/rockthejvm"
@@ -25,16 +25,10 @@ daniel:
 david:
   name: "David Amancio Gil Méndez"
   position: Xebia
-  about: David is a passionate advocate of simple, vanilla Scala and he studies and teaches it in his free time. As a Data Engineer, he has been building Streaming and Batch systems for 5 years. Before joining the Data world, he worked as a market analyst in Spain and as an international trade advisor in Canada.
+  about: "David is a passionate advocate of simple, vanilla Scala and he studies and teaches it in his free time. As a Data Engineer, he has been building Streaming and Batch systems for 5 years. Before joining the Data world, he worked as a market analyst in Spain and as an international trade advisor in Canada."
   image: /img/assets/workshops/DavidGil.jpg
   linkedin: "https://www.linkedin.com/in/davidgilmendez"
   github: "https://github.com/dagmendez"
 
-krzysztof:
-  name: "Krzysztof Borowski"
-  position: VirtusLab
-  about: Krzysztof is a Principal Software Engineer at VirtusLab and holds a Ph.D. in computer science. As both a researcher and hands-on practitioner, he focuses on designing simple, elegant, and scalable solutions that effectively meet business requirements.
-  image: /img/assets/workshops/KrzysztofBorowski.jpg
-  linkedin: "https://www.linkedin.com/in/liosedhel/"
-  github: "https://github.com/liosedhel"
+
 
