--- a/_data/team.yml
+++ b/_data/team.yml
@@ -10,7 +10,7 @@ members:
     github: "https://github.com/adriaanm"
   - name: "Prof. Dr. Andrei Kucharavy"
     position: "Informatics Institute of HEVS"
-    about: "Assistant Professor at the Informatics Institute of HEVS, co-director of the HES-SO Gen Learning Center and Swiss Cyber Defence Campus Distinguished Post-Doctoral Fellow. Until 2012 was convinced JVM was the best thing to have happened to humanity; wrote and maintained some code since; taught software and ML carpentry, devops, python magic. Since 2020, has been working on the impact of Generative ML on cybersecurity since 2020, and since 2023, specifically on code generation."
+    about: "Assistant Professor at the Informatics Institute of HEVS, co-director of the HES-SO Gen Learning Center and Swiss Cyber Defence Campus Distinguished Post-Doctoral Fellow, specializing in the security of Generative ML, notably generated code security."
     image: "/img/assets/team/AndreiKucharavy.jpg"
     linkedin: "https://www.linkedin.com/in/andrei-kucharavy/"
     github: "https://github.com/andrei_chiffa"
@@ -22,7 +22,7 @@ members:
     github: "https://github.com/scalacenter"
   - name: "Dimi Racordon"
     position: "EPFL"
-    about: "Dimi Racordon is a researcher at EPFL in Switzerland. She got her Ph.D. in computer science at the University of Geneva, but only because she bribed her jury members with chocolate. She worked on model checking and developed efficient data structures to generate and explore large state spaces. She then studied logics and type systems while trying to find new ways to teach computer science. Dimi likes generic programming, because it looks like math, and low-level programming languages, because she loves wasting time on premature optimization. Since she doesn't like Haskell's syntax, loathes JIT optimizers, isn't good enough to write C++, and thinks she's too cool for Rust, she decided to focus her research on another programming language for safe, high-level systems programming."
+    about: "Dimi is a researcher at EPFL in Switzerland. She got her Ph.D. in computer science at the University of Geneva. She worked on model checking and developed efficient data structures to generate and explore large state spaces. Dimi likes generic programming, because it looks like math, and low-level programming languages, because she loves wasting time on premature optimization."
     image: "/img/assets/team/DimiRacordon.jpg"
     linkedin: "https://www.linkedin.com/in/dimi-racordon-830972104/"
     github: "https://github.com/kyouko-taiga"
@@ -34,7 +34,7 @@ members:
     github: "https://github.com/liosedhel"
   - name: "Martin Odersky"
     position: "EPFL, Scala Center"
-    about: "Martin Odersky is a professor at EPFL in Lausanne, Switzerland. He is best known as the creator of the Scala programming language. Prior to that, he made several contributions to the development of Java. He created the Pizza and GJ languages, designed the original version of generics for Java, and wrote the javac reference compiler. More generally, Martin is interested in programming languages and methods, in particular how object-oriented and functional programming can be made to work seamlessly together. He believes is that the two paradigms are two sides of the same coin and should be unified as much as possible. He was named an ACM fellow for his achievements in this area."
+    about: "Martin Odersky is a professor at EPFL in Lausanne, Switzerland. He is best known as the creator of the Scala programming language. Prior to that, he made several contributions to the development of Java. He created the Pizza and GJ languages, designed the original version of generics for Java, and wrote the javac reference compiler."
     image: "/img/assets/team/martin-odersky.jpg"
     linkedin: "https://www.linkedin.com/in/odersky/"
     github: "https://github.com/odersky"
