--- a/.github/workflows/build-site.yml
+++ b/.github/workflows/build-site.yml
@@ -13,6 +13,8 @@ jobs:
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v4
+        with:
+          submodules: true
       - name: Setup Ruby
         uses: ruby/setup-ruby@v1
         with:
@@ -21,8 +23,6 @@ jobs:
       - name: Setup GitHub Pages
         uses: actions/configure-pages@v5
       - name: Build Website with Jekyll
-        run: bundle exec jekyll build
-        env:
-          JEKYLL_ENV: production
+        uses: actions/jekyll-build-pages@v1
       - name: Upload Website to GitHub Artifacts
         uses: actions/upload-pages-artifact@v3
