--- a/.github/workflows/build-site.yml
+++ b/.github/workflows/build-site.yml
@@ -28,5 +28,6 @@ jobs:
         env:
           JEKYLL_ENV: production
           OCTOKIT_ACCESS_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          PAGES_REPO_NWO: ${{ github.repository }}
       - name: Upload Website to GitHub Artifacts
         uses: actions/upload-pages-artifact@v3
