--- a/_config.yml
+++ b/_config.yml
@@ -19,14 +19,9 @@ plugins:
   - jekyll-sitemap
 
 collections:
-  talks-2025:
+  editions:
     output: true
-    permalink: /2025/:title
-    sort_by: time
-  workshops:
-    output: true
-    permalink: /workshops/:title
-    sort_by: order
+    permalink: /editions/:path
 
 links:
   code-of-conduct: https://scala-lang.org/conduct/
