--- a/_data/pricetable.yml
+++ b/_data/pricetable.yml
@@ -114,3 +114,12 @@ pricetable-workshops:
     date: Including VAT
     cta: Register now
     cta-url: https://register.event-works.com/lausanne/Scaladays2025/e/lk/k/
+ - title: Effective Programming in Scala with Friendly Agents
+    workshop-id: tomasz, lukasz
+    state: active
+    price1: CHF 700
+    price2: CHF 1395
+    description: "Led by Tomasz Godzik and Łukasz	Biały"
+    date: Including VAT
+    cta: Register now
+    cta-url: https://register.event-works.com/lausanne/Scaladays2025/e/lk/k/
