--- a/_data/workshops.yml
+++ b/_data/workshops.yml
@@ -46,4 +46,12 @@ tomasz:
   linkedin: "https://www.linkedin.com/in/tomasz-godzik-53300782/"
   github: "https://github.com/tgodzik"
 
+virtuslab:
+  name: "Tomasz Godzik and Łukasz Biały"
+  position: VirtusLab
+  about: 
+  image: "/assets/img/2025/workshops-trainers/tomasz-lukasz.jpg"
+  linkedin: "https://www.linkedin.com/company/virtuslab/"
+  github: 
+
 
