--- a/_data/workshops.yml
+++ b/_data/workshops.yml
@@ -50,7 +50,7 @@ virtuslab:
   name: "Tomasz Godzik and Łukasz Biały"
   position: VirtusLab
   about: "Tomasz has worked with multiple programming language tools through the years trying to provide a productive environment for other developers to interact with. Currently, team lead of Scala Open Source team at VirtusLab. Łukasz is a polyglot full-stack developer and functional programming enthusiast. Scala Developer Advocate @ VirtusLab. Values quality over quantity. Permanent learner with a severe information dependency problem. Enjoys conversations about philosophy and all things related to mind's inner workings. Loves mountains, biking and hiking."
-  image: "/assets/img/2025/workshops-trainers/tomasz-lukasz.jpg"
+  image: "/assets/img/2025/workshops-trainers/tomasz.lukasz.jpg"
   linkedin: "https://www.linkedin.com/company/virtuslab/"
   github: "https://github.com/virtuslab"
 
