--- a/_data/workshops.yml
+++ b/_data/workshops.yml
@@ -42,7 +42,7 @@ tomasz:
   name: "Tomasz Godzik"
   position: VirtusLab
   about: "Tomasz has worked with multiple programming language tools through the years trying to provide a productive environment for other developers to interact with. Currently, team lead of Scala Open Source team at VirtusLab."
-  image: "/assets/img/2025/workshops-trainers/tomasz-godzik.jpg"
+  image: "/assets/img/2025/workshops-trainers/tomasz-godzik.png"
   linkedin: "https://www.linkedin.com/in/tomasz-godzik-53300782/"
   github: "https://github.com/tgodzik"
 
