--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -388,6 +388,13 @@ talks-2025:
     time: 14:50 - 15:30
     speaker: Magda Stożek
     url: /editions/2025/talks/say-goodbye-to-implicits
+  - title: Blank
+    day: day3
+    stage: stage4
+    time: 14:00 - 14:40
+    speaker: ""
+    special: blank
+    url: ""
   - title: Macro-Free Type-Safe Database Queries in Scala
     day: day3
     stage: stage4
@@ -436,6 +443,116 @@ talks-2025:
     time: 17:00 - 17:40
     speaker: Li Haoyi
     url: /editions/2025/talks/easy-scala-builds-with-the
+
+  - title: Registration
+    day: day3
+    stage: stage1
+    time: 08:00 - 09:00
+    speaker: ""
+    special: registration
+    url: ""
+  - title: ""
+    day: day3
+    stage: stage2
+    time: 08:00 - 09:00
+    speaker: ""
+    special: blank
+    url: ""
+  - title: ""
+    day: day3
+    stage: stage3
+    time: 08:00 - 09:00
+    speaker: ""
+    special: blank
+    url: ""
+  - title: ""
+    day: day3
+    stage: stage4
+    time: 08:00 - 09:00
+    speaker: ""
+    special: blank
+    url: ""
+  - title: Keynote
+    day: day3
+    stage: stage1
+    time: 09:00 - 10:00
+    speaker: ""
+    url: ""
+  - title: ""
+    day: day3
+    stage: stage2
+    time: 09:00 - 10:00
+    speaker: ""
+    special: blank
+    url: ""
+  - title: ""
+    day: day3
+    stage: stage3
+    time: 09:00 - 10:00
+    speaker: ""
+    special: blank
+    url: ""
+  - title: ""
+    day: day3
+    stage: stage4
+    time: 09:00 - 10:00
+    speaker: ""
+    special: blank
+    url: ""
+  - title: Panel
+    day: day3
+    stage: stage1
+    time: 14:00 - 14:40
+    speaker: ""
+    url: ""
+  - title: ""
+    day: day3
+    stage: stage2
+    time: 14:00 - 14:40
+    speaker: ""
+    special: blank
+    url: ""
+  - title: ""
+    day: day3
+    stage: stage3
+    time: 14:00 - 14:40
+    speaker: ""
+    special: blank
+    url: ""
+  - title: ""
+    day: day3
+    stage: stage4
+    time: 14:00 - 14:40
+    speaker: ""
+    special: blank
+    url: ""
+  - title: Closing Panel
+    day: day3
+    stage: stage1
+    time: 18:00 - 19:00
+    speaker: ""
+    url: ""
+  - title: ""
+    day: day3
+    stage: stage2
+    time: 18:00 - 19:00
+    speaker: ""
+    special: blank
+    url: ""
+  - title: ""
+    day: day3
+    stage: stage3
+    time: 18:00 - 19:00
+    speaker: ""
+    special: blank
+    url: ""
+  - title: ""
+    day: day3
+    stage: stage4
+    time: 18:00 - 19:00
+    speaker: ""
+    special: blank
+    url: ""
 
 speakers:
 - name: Arman Bilge
