Enable Schedule link, add Speakers link

--- a/_data/nav.yml
+++ b/_data/nav.yml
@@ -25,16 +25,21 @@
     url: /the-venue
     nav: nav
     wip: false
-    
+
   - title: Blog
     url: /blog
     nav: nav
     wip: false
-    
+
   - title: Schedule
     url: /schedule
     nav: nav
-    wip: true
+    wip: false
+
+  - title: Speakers
+    url: /speakers
+    nav: nav
+    wip: false
 
 workshops:
   - title: Functional Stream Processing
@@ -45,8 +50,8 @@ workshops:
 
   - title: Real-World ZIO
     url: /workshop/3/
-    
+
   - title: Domain Driven Design in Scala 3
     url: /workshop/4/
-    
+
 
